@@ -1,6 +1,6 @@
-export(CleanProject,CrossCode,CrossTwo,gselect.list,GetAttr,GetCaseId,
+export(CleanProject,CrossCode,CrossTwo,gselect.list,GetAttr,GetCaseId,GetCaseName,
        GetCodingTable,GetFileId,GetFileIdSets,
-       list.deleted,pdelete,relation,retrieval,RQDA,RQDA2tm,
+       list.deleted,pdelete,relation,retrieval,RQDA,RQDA2tm,RQDAQuery,
        SearchFiles,ShowSubset,SummaryCoding,undelete,write.FileList)
 S3method(print,SummaryCoding)
 import(RGtk2)
