@@ -92,7 +92,7 @@ h1 {
 
 <h1>What's new in the latest version?</h1>
 <p>RQDA 0.1-6 is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a> (2008-12-26).
-<p>RQDA has been actively developed. You can click <A HREF="ChangeLog">here</A> to see the new features. There are few known-bugs, click <A HREF="KnownBugs">KnownBugs</A> for details.
+<p>RQDA has been actively developed. You can click <A HREF="http://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/ChangeLog?root=rqda&view=markup">here</A> to see the new features. There are few known-bugs, click <A HREF="http://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/KnownBugs?root=rqda&view=markup">KnownBugskup</A> for details.
 
 <h1>More Informaiton</h1>
 
